Kubernetes/AgrOne/AgrOne-Dev/AgroGeoServer-WEB/ingress-nginx/agrogeoserver-dev-web-ingress-config.yaml
#---
#
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  annotations:
#    nginx.ingress.kubernetes.io/app-root: /geoserver
##    nginx.ingress.kubernetes.io/use-regex: "true"
##    nginx.ingress.kubernetes.io/rewrite-target: /
##    nginx.org/client-max-body-size: "1024m"
##    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
#  name: agrogeoserver-dev-web-ingres
#  namespace: agrotech-dev
#spec:
#  ingressClassName: nginx
#  tls:
#    - hosts:
#        - agrogeoserver-dev-web-ingres
#      secretName: tls-secret-prodata-local
#  rules:
#  - host: agrogeo-dev-web.prodata.local
#    http:
#      paths:
##      - path: /geoserver/web/(/|$)(.*)
#      - path: /
#        pathType: Prefix
#        backend:
#          service:
#            name: agrogeoserver-dev-web-service
#            port:
#              number: 8080
#


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agrogeoserver-dev-web-ingres
  annotations:
    nginx.org/client-max-body-size: "1024m"
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: agrotech-dev
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - 'agrogeo-dev-web.prodata.local'
      secretName: tls-secret-prodata-local
  rules:
  - host: agrogeo-dev-web.prodata.local
    http:
      paths:
      - backend:
          service:
            name: agrogeoserver-dev-web-service
            port:
              number: 8080
        path: /
        pathType: Prefix
